--- a/hydro_dashboard/templates/index.html
+++ b/hydro_dashboard/templates/index.html
@@ -3,9 +3,14 @@
 <head>
     <title>Hydroponics Monitor</title>
     <link rel="stylesheet" href="/static/style.css">
+    <meta http-equiv="refresh" content="30">
 </head>
 <body>
     <h1>Hydroponics System Dashboard</h1>
+
+    {% if data.get('timestamp') %}
+        <p style="text-align: center; font-style: italic;">Last updated: {{ data['timestamp'] }}</p>
+    {% endif %}
 
     <div class="container">
         <div class="video">
