--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
 <html>
+</head>
 <head>
     <title>Hydroponics Monitor</title>
     <link rel="stylesheet" href="/static/style.css">
+    <script>
+      setTimeout(function() {
+        window.location.reload(1);
+      }, 3000); // Refresh every 30 seconds
+    </script>
 </head>
 </head>
 <body>
